tests/sources/invalid/borrow/branch_move_errors.fire
// Branch-sensitive ownership error tests

import @firescript/std.io.println;

fn consume(s: string) -> void {
    println(s);
}

value: string = "branch";
cond: int32 = 1i32;

if (cond == 1i32) {
    consume(value);  // value moved on this path
}

println(value); // Error: value may have moved in the if branch  //~ ERROR FS-SEM-0001 @9
